Cleaned up the main structure a bit, resolved a pontential bug and improved printing of writer